# graph_visualizer

./: Cargo.toml  LICENSE  README.md  build-releases.sh  graph_visualizer.js  graph_visualizer_bg.wasm  index.html
.github/workflows/: rust.yml
src/: app.rs  graph.rs  main.rs  painter.rs  traversers.rs
src/generation/: mod.rs  random.rs
src/menus/: egui_settings.rs  graphs.rs  mod.rs  nodes.rs  painter.rs  traversals.rs
